<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:background="#a6e8ef"
    android:layout_height="match_parent">

    <TextView

        android:id="@+id/textThem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/textThem"
        android:textColor="#ff00"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTenCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textThem"
        android:layout_marginTop="10dp"
         />

    <Button
        android:id="@+id/buttonThem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonHuy"

        android:layout_alignBottom="@+id/buttonHuy"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="58dp"
        android:text="@string/buttonThem" />

    <Button
        android:id="@+id/buttonHuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTenCV"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"

        android:layout_toRightOf="@id/buttonThem"
        android:text="@string/buttonHuy" />


</RelativeLayout>